--- a/jsc/index.html
+++ b/jsc/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Integrador</title>
+    <script type="module" src="/jsc/css.css"></script>
+
 </head>
 
 <body>
